force-app/main/default/objects/RD_Pricing__c/RD_Pricing__c.object-meta.xml
<CustomObject>
    <label>RD Pricing</label>
    <nameField>
        <label>RD Pricing Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RD Pricings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>