force-app/main/default/objects/RD_Pricing__c/fields/Armor_Ring_Override__c.field-meta.xml
<CustomField>
    <fullName>Armor_Ring_Override__c</fullName>
    <label>Armor Ring Override</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>