force-app/main/default/objects/RD_Pricing__c/fields/ASME_CE_or_Temp_Test_Lot_Charge__c.field-meta.xml
<CustomField>
    <fullName>ASME_CE_or_Temp_Test_Lot_Charge__c</fullName>
    <label>ASME, CE or Temp Test Lot Charge</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>