force-app/main/default/objects/RD_Pricing__c/fields/ATEX_Lot_Charge_Overide__c.field-meta.xml
<CustomField>
    <fullName>ATEX_Lot_Charge_Overide__c</fullName>
    <label>ATEX Lot Charge Overide</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>