force-app/main/default/objects/RD_Pricing__c/fields/Base_Rupture_Disc_Price_Each__c.field-meta.xml
<CustomField>
    <fullName>Base_Rupture_Disc_Price_Each__c</fullName>
    <label>Base Rupture Disc Price Each</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>