force-app/main/default/objects/RD_Pricing__c/fields/Cleaning_Price_Each__c.field-meta.xml
<CustomField>
    <fullName>Cleaning_Price_Each__c</fullName>
    <label>Cleaning Price Each</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>