force-app/main/default/objects/RD_Pricing__c/fields/Coating_s_Price_Adder__c.field-meta.xml
<CustomField>
    <fullName>Coating_s_Price_Adder__c</fullName>
    <formula>Inlet_Coating_Price_Each__c +  Outlet_Coating_Price_Each__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Coating(s) Price Adder</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>