force-app/main/default/objects/RD_Pricing__c/fields/Coatings_Price_Adder__c.field-meta.xml
<CustomField>
    <fullName>Coatings_Price_Adder__c</fullName>
    <label>Coatings Price Adder</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>