force-app/main/default/objects/RD_Pricing__c/fields/CUTR_Lot_Charge__c.field-meta.xml
<CustomField>
    <fullName>CUTR_Lot_Charge__c</fullName>
    <label>CUTR Lot Charge</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>