force-app/main/default/objects/RD_Pricing__c/fields/Dent_Protector_Price_Each__c.field-meta.xml
<CustomField>
    <fullName>Dent_Protector_Price_Each__c</fullName>
    <label>Dent Protector Price Each</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>