force-app/main/default/objects/RD_Pricing__c/fields/Discountable_Price_Each__c.field-meta.xml
<CustomField>
    <fullName>Discountable_Price_Each__c</fullName>
    <label>Discountable Price Each</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>