force-app/main/default/objects/RD_Pricing__c/fields/Electropolish_Disc_Process_Side__c.field-meta.xml
<CustomField>
    <fullName>Electropolish_Disc_Process_Side__c</fullName>
    <label>Electropolish Disc Process Side</label>
    <length>255</length>
    <type>Text</type>
</CustomField>