force-app/main/default/objects/RD_Pricing__c/fields/Graphite_Rupture_Disc_Lot_Charge__c.field-meta.xml
<CustomField>
    <fullName>Graphite_Rupture_Disc_Lot_Charge__c</fullName>
    <label>Graphite Rupture Disc Lot Charge</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>