force-app/main/default/objects/RD_Pricing__c/fields/Graphite_Rupture_DiscPrice_Each_Override__c.field-meta.xml
<CustomField>
    <fullName>Graphite_Rupture_DiscPrice_Each_Override__c</fullName>
    <label>Graphite Rupture DiscPrice Each Override</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>