force-app/main/default/objects/RD_Pricing__c/fields/Handling_Support_Price_Each__c.field-meta.xml
<CustomField>
    <fullName>Handling_Support_Price_Each__c</fullName>
    <label>Handling Support Price Each</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>