force-app/main/default/objects/RD_Pricing__c/fields/HD_Ring_Holder__c.field-meta.xml
<CustomField>
    <fullName>HD_Ring_Holder__c</fullName>
    <label>HD Ring Holder</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>