force-app/main/default/objects/RD_Pricing__c/fields/Holder_Inlet_Price_Each__c.field-meta.xml
<CustomField>
    <fullName>Holder_Inlet_Price_Each__c</fullName>
    <label>Holder Inlet Price Each</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>