force-app/main/default/objects/RD_Pricing__c/fields/Holder_Outlet_Price_Each__c.field-meta.xml
<CustomField>
    <fullName>Holder_Outlet_Price_Each__c</fullName>
    <label>Holder Outlet Price Each</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>