force-app/main/default/objects/RD_Pricing__c/fields/Holder_Price_Adder__c.field-meta.xml
<CustomField>
    <fullName>Holder_Price_Adder__c</fullName>
    <formula>Holder_Inlet_Price_Each__c  +  Holder_Outlet_Price_Each__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Holder Price Adder</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>