force-app/main/default/objects/RD_Pricing__c/fields/Holder_Price_Adder_Override__c.field-meta.xml
<CustomField>
    <fullName>Holder_Price_Adder_Override__c</fullName>
    <label>Holder Price Adder Override</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>