force-app/main/default/objects/RD_Pricing__c/fields/HPXProMedia_Adder__c.field-meta.xml
<CustomField>
    <fullName>HPXProMedia_Adder__c</fullName>
    <label>HPXProMedia Adder</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>