force-app/main/default/objects/RD_Pricing__c/fields/Individual_Packaging_Price_Each__c.field-meta.xml
<CustomField>
    <fullName>Individual_Packaging_Price_Each__c</fullName>
    <label>Individual Packaging Price Each</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>