force-app/main/default/objects/RD_Pricing__c/fields/Inlet_Coating_Price_Each__c.field-meta.xml
<CustomField>
    <fullName>Inlet_Coating_Price_Each__c</fullName>
    <label>Inlet Coating Price Each</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>