force-app/main/default/objects/RD_Pricing__c/fields/Integral_BDI_Custom_Wiring_Price_Each__c.field-meta.xml
<CustomField>
    <fullName>Integral_BDI_Custom_Wiring_Price_Each__c</fullName>
    <label>Integral BDI Custom Wiring Price Each</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>