force-app/main/default/objects/RD_Pricing__c/fields/Integral_BDI_Price_Each_Override__c.field-meta.xml
<CustomField>
    <fullName>Integral_BDI_Price_Each_Override__c</fullName>
    <label>Integral BDI Price Each Override</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>