force-app/main/default/objects/RD_Pricing__c/fields/Integral_BDICustWiring_PriceEch_Override__c.field-meta.xml
<CustomField>
    <fullName>Integral_BDICustWiring_PriceEch_Override__c</fullName>
    <label>Integral BDICustWiring PriceEch Override</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>