force-app/main/default/objects/RD_Pricing__c/fields/KOSHA_Lot_Charge_Override__c.field-meta.xml
<CustomField>
    <fullName>KOSHA_Lot_Charge_Override__c</fullName>
    <label>KOSHA Lot Charge Override</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>