force-app/main/default/objects/RD_Pricing__c/fields/Liner_s_Price_Adder__c.field-meta.xml
<CustomField>
    <fullName>Liner_s_Price_Adder__c</fullName>
    <formula>Inlet_Liner_Price_Each__c  +  Outlet_Liner_Price_Each__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Liner(s) Price Adder</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>