force-app/main/default/objects/RD_Pricing__c/fields/Liner_s_Price_Adder_Override__c.field-meta.xml
<CustomField>
    <fullName>Liner_s_Price_Adder_Override__c</fullName>
    <label>Liner(s) Price Adder Override</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>