force-app/main/default/objects/RD_Pricing__c/fields/Liquid_Test_Lot_Charge__c.field-meta.xml
<CustomField>
    <fullName>Liquid_Test_Lot_Charge__c</fullName>
    <label>Liquid Test Lot Charge</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>