force-app/main/default/objects/RD_Pricing__c/fields/Manufacturing_Range_Price_Adder__c.field-meta.xml
<CustomField>
    <fullName>Manufacturing_Range_Price_Adder__c</fullName>
    <label>Manufacturing Range Price Adder</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>