force-app/main/default/objects/RD_Pricing__c/fields/Non_Discountable_Price_Each__c.field-meta.xml
<CustomField>
    <fullName>Non_Discountable_Price_Each__c</fullName>
    <label>Non Discountable Price Each</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>