force-app/main/default/objects/RD_Pricing__c/fields/O_Holder__c.field-meta.xml
<CustomField>
    <fullName>O_Holder__c</fullName>
    <label>O Holder</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>