force-app/main/default/objects/RD_Pricing__c/fields/Outlet_Liner_Price_Each_Override__c.field-meta.xml
<CustomField>
    <fullName>Outlet_Liner_Price_Each_Override__c</fullName>
    <label>Outlet Liner Price Each Override</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>