force-app/main/default/objects/RD_Pricing__c/fields/Outlet_Ring_Price_Each__c.field-meta.xml
<CustomField>
    <fullName>Outlet_Ring_Price_Each__c</fullName>
    <label>Outlet Ring Price Each</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>