force-app/main/default/objects/RD_Pricing__c/fields/PMI_Lot_Charge_Override__c.field-meta.xml
<CustomField>
    <fullName>PMI_Lot_Charge_Override__c</fullName>
    <label>PMI Lot Charge Override</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>