force-app/main/default/objects/RD_Pricing__c/fields/Price_Temp_Test_Qty_A__c.field-meta.xml
<CustomField>
    <fullName>Price_Temp_Test_Qty_A__c</fullName>
    <label>Price Temp Test Qty A</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>