force-app/main/default/objects/RD_Pricing__c/fields/PriceQtyA__c.field-meta.xml
<CustomField>
    <fullName>PriceQtyA__c</fullName>
    <label>PriceQtyA</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>