force-app/main/default/objects/RD_Pricing__c/fields/Qty_of_Test_RD_Charged_Override__c.field-meta.xml
<CustomField>
    <fullName>Qty_of_Test_RD_Charged_Override__c</fullName>
    <label>Qty of Test RD Charged Override</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>