force-app/main/default/objects/RD_Pricing__c/fields/Qty_of_Test_Rupture_Discs_Charged_for__c.field-meta.xml
<CustomField>
    <fullName>Qty_of_Test_Rupture_Discs_Charged_for__c</fullName>
    <label>Qty of Test Rupture Discs Charged for</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>