force-app/main/default/objects/RD_Pricing__c/fields/Quantity_Discount_Multiplier_Override__c.field-meta.xml
<CustomField>
    <fullName>Quantity_Discount_Multiplier_Override__c</fullName>
    <label>Quantity Discount Multiplier Override</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>