force-app/main/default/objects/RD_Pricing__c/fields/Quantity_to_be_tested__c.field-meta.xml
<CustomField>
    <fullName>Quantity_to_be_tested__c</fullName>
    <label>Quantity to be tested</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>