force-app/main/default/objects/RD_Pricing__c/fields/Quote_Line__c.field-meta.xml
<CustomField>
    <fullName>Quote_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quote Line</label>
    <referenceTo>RD_Pricing__c</referenceTo>
    <relationshipLabel>RD Pricings</relationshipLabel>
    <relationshipName>RD_Pricings</relationshipName>
    <type>Lookup</type>
</CustomField>