force-app/main/default/objects/RD_Pricing__c/fields/Rings_Price_Adder__c.field-meta.xml
<CustomField>
    <fullName>Rings_Price_Adder__c</fullName>
    <label>Rings Price Adder</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>