force-app/main/default/objects/RD_Pricing__c/fields/Rupture_Disc__c.field-meta.xml
<CustomField>
    <fullName>Rupture_Disc__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Rupture Disc</label>
    <referenceTo>Rupture_Disc__c</referenceTo>
    <relationshipLabel>RD Pricings</relationshipLabel>
    <relationshipName>RD_Pricings</relationshipName>
    <type>Lookup</type>
</CustomField>