force-app/main/default/objects/RD_Pricing__c/fields/Rupture_Disc_or_Top_Section_Price_Each__c.field-meta.xml
<CustomField>
    <fullName>Rupture_Disc_or_Top_Section_Price_Each__c</fullName>
    <label>Rupture Disc or Top Section Price Each</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>