force-app/main/default/objects/RD_Pricing__c/fields/Rupture_Disc_TopSect_Price_Each_Override__c.field-meta.xml
<CustomField>
    <fullName>Rupture_Disc_TopSect_Price_Each_Override__c</fullName>
    <label>Rupture Disc TopSect Price Each Override</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>