force-app/main/default/objects/RD_Pricing__c/fields/Shippable_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Shippable_Quantity__c</fullName>
    <label>Shippable Quantity</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>