force-app/main/default/objects/RD_Pricing__c/fields/Shippable_Quantity_Override__c.field-meta.xml
<CustomField>
    <fullName>Shippable_Quantity_Override__c</fullName>
    <label>Shippable Quantity Override</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>