force-app/main/default/objects/RD_Pricing__c/fields/Special_Assembly_Price_Each_Adder__c.field-meta.xml
<CustomField>
    <fullName>Special_Assembly_Price_Each_Adder__c</fullName>
    <label>Special Assembly Price Each Adder</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>