force-app/main/default/objects/RD_Pricing__c/fields/Special_Assembly_PriceEch_Adder_Override__c.field-meta.xml
<CustomField>
    <fullName>Special_Assembly_PriceEch_Adder_Override__c</fullName>
    <label>Special Assembly PriceEch Adder Override</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>