force-app/main/default/objects/RD_Pricing__c/fields/Surface_Finish_Electropolish_Price_Each__c.field-meta.xml
<CustomField>
    <fullName>Surface_Finish_Electropolish_Price_Each__c</fullName>
    <label>Surface Finish/Electropolish Price Each</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>