force-app/main/default/objects/RD_Pricing__c/fields/Surface_FinishElectropolishPriceOverride__c.field-meta.xml
<CustomField>
    <fullName>Surface_FinishElectropolishPriceOverride__c</fullName>
    <label>Surface FinishElectropolishPriceOverride</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>