force-app/main/default/objects/RD_Pricing__c/fields/Test_Disc_Price_Each_all_options__c.field-meta.xml
<CustomField>
    <fullName>Test_Disc_Price_Each_all_options__c</fullName>
    <label>Test Disc Price Each (all options)</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>