force-app/main/default/objects/RD_Pricing__c/fields/Test_Disc_Price_Each_no_Rings__c.field-meta.xml
<CustomField>
    <fullName>Test_Disc_Price_Each_no_Rings__c</fullName>
    <label>Test Disc Price Each (no Rings)</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>