force-app/main/default/objects/RD_Pricing__c/fields/Test_Disc_Price_Method__c.field-meta.xml
<CustomField>
    <fullName>Test_Disc_Price_Method__c</fullName>
    <label>Test Disc Price Method</label>
    <length>255</length>
    <type>Text</type>
</CustomField>