force-app/main/default/objects/RD_Pricing__c/fields/Third_Party_Test_Disc_Price_Each__c.field-meta.xml
<CustomField>
    <fullName>Third_Party_Test_Disc_Price_Each__c</fullName>
    <label>Third Party Test Disc Price Each</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>