force-app/main/default/objects/RD_Pricing__c/fields/Third_Party_Test_DiscPrice_Each_Override__c.field-meta.xml
<CustomField>
    <fullName>Third_Party_Test_DiscPrice_Each_Override__c</fullName>
    <label>Third Party Test DiscPrice Each Override</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>