force-app/main/default/objects/RD_Pricing__c/fields/Third_Party_Witness_Test_Lot_Charge__c.field-meta.xml
<CustomField>
    <fullName>Third_Party_Witness_Test_Lot_Charge__c</fullName>
    <label>Third Party Witness Test Lot Charge</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>